[package]
name = "shrev"
version = "1.0.1"
authors = ["Simon Rönnberg <seamonr@gmail.com>", "torkleyy <torkleyy@gmail.com>" ]
repository = "https://github.com/Rhuagh/shrev-rs.git"
homepage = "https://github.com/Rhuagh/shrev-rs.git"

license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/shrev"
description = "Event channel, meant to be used with `specs`."

keywords = ["specs", "events"]

[dependencies]
derivative = "1.0.0"
parking_lot = ">=0.1.1, <0.8"
