[package]
name = "shrev"
version = "1.1.3"
authors = ["Simon Rönnberg <seamonr@gmail.com>", "torkleyy <torkleyy@gmail.com>" ]
repository = "https://github.com/rustgd/shrev-rs.git"
homepage = "https://github.com/rustgd/shrev-rs.git"
edition = "2018"

license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/shrev"
description = "Event channel, meant to be used with `specs`."

categories = ["game-engines"]
keywords = ["ecs", "specs", "events"]

[dependencies]
